--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">LolUniverse</string>
-    <string name="app_description">League of Legends companion app</string>
+    <string name="app_description">League of Legends - εφαρμογή</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Ρυθμίσεις</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="Champions">Champions</string>
+    <string name="Champions">Μαχητές</string>
 </resources>
