--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+﻿<resources>
     <string name="app_name">LolUniverse</string>
     <string name="app_description">League of Legends 신청</string>
     <string name="hello_world">Hello world!</string>
@@ -6,5 +6,7 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="selectHelp">카테고리를 선택하세요</string>
     <string name="Champions">챔피언스</string>
+    <string name="RegionStatus">지역 현황</string>
 </resources>
