--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="selectHelp">Please select a category</string>
     <string name="Champions">Champions</string>
+    <string name="RegionStatus">Region Status</string>
+    <string name="title_activity_champions">ChampionsActivity</string>
+    <string name="title_activity_champion_list">Champions</string>
 </resources>
