--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="selectHelp">Please select a category</string>
     <string name="Champions">Champions</string>
     <string name="RegionStatus">Region Status</string>
-    <string name="title_activity_champions">ChampionsActivity</string>
+    <string name="title_activity_champions">Champions</string>
     <string name="title_activity_champion_list">Champions</string>
-    <string name="title_activity_champion_details">ChampionDetailsActivity</string>
+    <string name="title_activity_champion_details">Champion Details</string>
 </resources>
