--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -7,9 +7,17 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="selectHelp">Παλακαλώ επιλέξτε κατηγορία</string>
-    <string name="Champions">Μαχητές</string>
+    <string name="Champions">Μαχητες</string>
     <string name="RegionStatus">Πληροφορίες Περιοχών</string>
     <string name="title_activity_champions">Μαχητές</string>
-    <string name="title_activity_champion_list">Μαχητές</string>
+    <string name="title_activity_champion_list">Μαχητες</string>
     <string name="title_activity_champion_details">Πληροφορίες Μαχητή</string>
+    <string name="difficultyTitle">δυσκολία</string>
+    <string name="magicTitle">μαγεία</string>
+    <string name="defenceTitle">άμυνα</string>
+    <string name="attackTitle">επίθεση</string>
+    <string name="loreTitle">Ιστορία χαρακτήρα</string>
+    <string name="enemyTipsTitle">Συμβουλές αντιπάλων</string>
+    <string name="allyTipsTitle">Συμβουλές συμμάχων</string>
+    <string name="skinsTitle">στολές</string>
 </resources>
