typo in string resources, Lore

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,7 +16,7 @@
     <string name="magicTitle">magic</string>
     <string name="defenceTitle">defence</string>
     <string name="attackTitle">attack</string>
-    <string name="loreTitle">Role</string>
+    <string name="loreTitle">Lore</string>
     <string name="enemyTipsTitle">Enemy tips</string>
     <string name="allyTipsTitle">Ally tips</string>
     <string name="skinsTitle">skins</string>
