--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -8,7 +8,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="selectHelp">카테고리를 선택하세요</string>
     <string name="Champions">챔피언스</string>
-    <string name="RegionStatus">지역 현황</string>
+    <string name="RegionStatus">추천 지역</string>
     <string name="title_activity_champions">챔피언스</string>
     <string name="title_activity_champion_list">챔피언스</string>
     <string name="title_activity_champion_details">챔피언스</string>
@@ -20,4 +20,6 @@
     <string name="enemyTipsTitle">적 팁</string>
     <string name="allyTipsTitle">앨리 팁</string>
     <string name="skinsTitle">스킨</string>
+    <string name="title_activity_region_status">지역 현황</string>
+    <string name="waitGps">우리는 당신의 장치 GPS 를 기반으로 최적의 지역 검색하는 동안 잠시 기다려주십시오</string>
 </resources>
