--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="skinsTitle">skins</string>
     <string name="title_activity_region_status">Region Status</string>
     <string name="waitGps">Please wait while we are searching for optimal region based on your device GPS</string>
+    <string name="recommendedRegion">recommended for %s</string>
 </resources>
