--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -20,7 +20,8 @@
     <string name="enemyTipsTitle">Συμβουλές αντιπάλων</string>
     <string name="allyTipsTitle">Συμβουλές συμμάχων</string>
     <string name="skinsTitle">στολές</string>
-    <string name="title_activity_region_status">Πληροφορίες Περιοχών</string>
+    <string name="title_activity_region_status">Προτεινόμενη Περιοχή</string>
     <string name="waitGps">Παρακαλώ περιμένετε, ψάχνουμε την ιδανική περιοχή σύμφωνα με το GPS της συσκευή σας</string>
     <string name="recommendedRegion">προτεινόμενο για %s</string>
+    <string name="findUsOnGithub">Βρείτε μας στο GitHub!</string>
 </resources>
